# trading-bot

./: .gitignore  Cargo.toml  docker-compose.yml  rustfmt.toml
docs/: 01_domain_overview.md  02_directory_structure.md  03_data_flow.md  04_tech_stack_architecture.md  05_changelog.md  README.md
migrations/: config_init.sql  init.sql
src/: app.rs  init.rs  lib.rs  main.rs  types.rs
src/adapters/: mod.rs
src/adapters/alternative/: dto.rs  fng.rs  mod.rs
src/adapters/binance/: dto.rs  market_stream.rs  mod.rs  signing.rs  user_stream.rs
src/adapters/binance/order/: api.rs  executor.rs  mod.rs  order_stream.rs  user_stream.rs
src/adapters/binance/ws/: mod.rs  reconnect.rs
src/adapters/postgres/: config_repo.rs  mod.rs  order_repo.rs  pool.rs  type_impls.rs
src/adapters/questdb/: writer.rs
src/adapters/questdb_rest/: data_source.rs
src/adapters/strategies/: ema_cross.rs  mod.rs
src/application/: account_event_handler.rs  collector.rs  mod.rs
src/application/backtest/: backtest_executor.rs  engine.rs  mod.rs  portfolio.rs  report.rs  strategy.rs
src/backtest/: data.rs  engine.rs  mod.rs  portfolio.rs  questdb_data.rs  report.rs  strategy.rs  types.rs
src/backtest/strategies/: ema_cross.rs  mod.rs
src/binance/: dto.rs  market_stream.rs  mod.rs  order_client.rs  order_stream.rs  rest.rs  signing.rs  user_stream.rs
src/collector/: app.rs
src/config/: app_config.rs  binance.rs  mod.rs  runtime.rs
src/db/: config_reader.rs  mod.rs  writer.rs
src/domain/: backtest.rs  event.rs  mod.rs  order.rs
src/market_data/: alterantive_fng.rs  alternative_fng.rs  binance_futures_ws.rs  binance_spot_ws.rs  dtos.rs  event.rs  mod.rs  types.rs
src/market_data/alternative/: dto.rs  fng.rs
src/market_data/binance/: data_ws.rs  dto.rs  mod.rs  ws.rs
src/order/: backtest.rs  executor.rs  live.rs  mod.rs  storage.rs  types.rs
src/ports/: config_repository.rs  fill_sink.rs  fng_feed.rs  live_market_feed.rs  market_data_sink.rs  market_data_source.rs  mod.rs  order_executor.rs  order_repository.rs
src/storage/: config_db.rs  event.rs  mod.rs
src/storage/postgres/: config.rs  mod.rs  order.rs
src/storage/questdb/: writer.rs
tests/: backtest_buy_and_hold.rs
