[package]
name = "trading-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.3", features = ["json"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = [
    "rustls-tls-webpki-roots",
] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
questdb-rs = { version = "6.1.0", features = ["rust_decimal"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1.89"
